--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -27,10 +27,7 @@ footer {
     display: inline-block;
     text-align: center;
     .meta {
-        color: rgba($text-color, .5);
-        letter-spacing: 0.1em;
         display: inline;
-        text-transform: uppercase;
     }
     a.button {
         margin-left: 1em;
@@ -44,8 +41,7 @@ header {
 }
 
 .meta {
-    color: rgba($text-color, .5);
-    font-size: 0.9em;
+    color: $meta; // rgba($text-color, .65);
     letter-spacing: 0.1em;
     margin: 0;
     text-transform: uppercase;
@@ -60,7 +56,6 @@ header {
     }
     header {
         color: $feature-image-text-color;
-        background-size: $feature-image-size;
         margin-bottom: 0;
         padding: $padding-large/2.5 $padding-large;
         .meta {
@@ -82,34 +77,17 @@ header {
     @media screen and (max-width: $break) {
         padding: $padding-small $padding-small;
     }
-}
-
-/* --- Post navigation --- */
-#post-nav {
-    width: 100%;
-    border-bottom: 1px solid $border-color;
-    display: flex;
-    float: left;
-
-    a,
-    .page-title {
-        display: inline-block;
-    }
-
-    .page-title {
-        font-size: 1.2em;
-        margin-bottom: 1em;
-        width: 100%;
-    }
-
-    a {
-        padding: 2em 3em;
-        border: 1px solid rgba(255, 255, 255, 0);
-        text-align: center;
-        width: 50%;
-    }
-
-    i {
-        vertical-align: middle;
+    
+    /* --- Responsive --- */
+    @media screen and (min-width: $break) {
+        background-size: 120% auto;
+    } 
+    
+    @media screen and (max-width: $break) {
+        background-size: 200% auto;
+    } 
+    
+    @media screen and (max-width: $sm-break) {
+        background-size: 400% auto;
     }
 }
