--- a/_includes/blog_nav.html
+++ b/_includes/blog_nav.html
@@ -4,17 +4,16 @@
         
         {% if paginator.previous_page and paginator.previous_page != 1%}
         <!-- << -->
-        <a aria-label="{{ site.theme_settings.str_previous_page }}" href="{{ '/' | relative_url }}"
-           style="margin-right:0.1em" class="button">
-            <i class="fa fa-angle-double-left"></i>
+        <a aria-label="{{ site.data.language.str_previous_page | default: 'Prev' }}" href="{{ '/' | relative_url }}" class="button">
+            <span><i class="fa fa-angle-double-left"></i></span>
         </a>
         {% endif %}
         
         <!-- < previous -->
-        <a aria-label="{{ site.theme_settings.str_previous_page }}" href="{{ paginator.previous_page_path | relative_url }}"
+        <a aria-label="{{ site.data.language.str_previous_page | default: 'Prev' }}" href="{{ paginator.previous_page_path | relative_url }}"
            {% unless paginator.previous_page %}style="visibility:hidden"{% endunless %} class="button">
-            <i class="fa fa-chevron-left"></i>
-            {{ site.theme_settings.str_previous_page }}
+            <span><i class="fa fa-chevron-left"></i></span>
+            {{ site.data.language.str_previous_page | default: "Prev" }}
         </a>
     </div>
 
@@ -25,17 +24,17 @@
     <div class="next">
         
         <!-- next > -->
-        <a aria-label="{{ site.theme_settings.str_next_page }}" href="{{ paginator.next_page_path | relative_url }}"
+        <a aria-label="{{ site.data.language.str_next_page | default: 'Next' }}" href="{{ paginator.next_page_path | relative_url }}"
            {% unless paginator.next_page %}style="visibility:hidden"{% endunless %} class="button">
-            {{ site.theme_settings.str_next_page }}
-            <i class="fa fa-chevron-right"></i>
+            {{ site.data.language.str_next_page | default: "Next" }}
+            <span><i class="fa fa-chevron-right"></i></span>
         </a>
 
         {% if paginator.next_page and paginator.next_page != paginator.total_pages %}
         <!-- >> -->
-        <a aria-label="{{ site.theme_settings.str_next_page }}" href="{{ site.paginate_path | relative_url | replace: ':num', paginator.total_pages }}"
-           style="margin-left:0.1em" class="button">
-            <i class="fa fa-angle-double-right"></i>
+        <a aria-label="{{ site.data.language.str_next_page | default: 'Next' }}"
+        href="{{ site.paginate_path | relative_url | replace: ':num', paginator.total_pages }}" class="button">
+            <span><i class="fa fa-angle-double-right"></i></span>
         </a>
         {% endif %}
         
